--- a/templates/discussion.html
+++ b/templates/discussion.html
@@ -2,6 +2,11 @@
 #discussion .comment .username {
   color: black;
 }
+#discussion .comment .comment-author-role {
+  border: 1px solid #AAA;
+  font-size: 90%;
+  padding: 2px 4px;
+}
 #discussion .comment .proposed-answer {
   margin: 1em 0;
   border: 1px solid #EEE;
@@ -48,7 +53,7 @@
       <div class="panel panel-default">
         <div class="panel-body">
           <p>
-            This conversation is open
+            This conversation is <span style="color: green">open</span>
             <button type="submit" class="btn btn-default btn-sm">We&rsquo;re good, close it</button>
           </p>
 
@@ -64,7 +69,9 @@
 <div id="comment-template" style="display: none">
   <div class="comment panel panel-default">
     <div class="panel-heading">
-      <span class="comment-author">...</span> commented <span class="comment-date"></span>
+      <span class="comment-author">...</span>
+      commented <span class="comment-date"></span>
+      <span class="comment-author-role"></span>
     </div>
     <div class="panel-body">
       <div class="comment-text"> </div>
@@ -156,6 +163,7 @@ function render_comment(item) {
   n.find('.comment-author').text(item.user.name);
   n.find('.comment-date').text(item.date_relative);
   n.find('.comment-date').attr('title', new Date(item.date_posix * 1000));
+  n.find('.comment-author-role').text(item.user_role);
   n.find('.comment-text').html(item.text_rendered);
   if (item.user.id == {{request.user.id}}) // TODO: admins too
     n.addClass('has-edit-priv');
