refactor: split Answer into TaskQuestion and TaskAnswer so that we have a proper table for storing the history of answers

--- a/templates/question.html
+++ b/templates/question.html
@@ -169,7 +169,7 @@ Next Question: {{q.title}}
 <script>
 $(function() {
     $('#inputctrl').focus();
-    {% if answer.discussion %}
+    {% if discussion %}
     start_a_discussion(true); // is idempotent
     {% endif %}
 
