--- a/templates/base.html
+++ b/templates/base.html
@@ -64,13 +64,29 @@
           <a class="navbar-brand" href="/">GovReady Q</a>
         </div>
 
-        {% comment %}
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="/">Home</a></li>
           </ul>
+          <ul class="nav navbar-nav navbar-right">
+            {% if request.user.is_authenticated %}
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{request.user}} <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                {% with settings_task=request.user.get_settings_task %}
+                  {% if settings_task %}
+                    <li><a href="{{settings_task.get_absolute_url}}">Settings</a></li>
+                  {% endif %}
+                {% endwith %}
+                <li role="separator" class="divider"></li>
+                <li><a href="/logout">Log Out</a></li>
+              </ul>
+            </li>
+            {% else %}
+            <li><a href="/login">Log In</a></li>
+            {% endif %}
+          </ul>          
         </div><!-- /.navbar-collapse -->
-        {% endcomment %}
       </div><!-- /.container-fluid -->
     </nav>
 
