--- a/templates/module-intro.html
+++ b/templates/module-intro.html
@@ -16,6 +16,18 @@
 
 <div style="margin-top: 45px" class="row">
 	<div class="col-sm-push-2 col-sm-8">
+
+        {% with source_invitation as inv %}
+          {% if inv %}
+            <div class="panel panel-warning">
+              <div class="panel-heading">Invitation from {{inv.from_user}}</div>
+              <div class="panel-body">
+                {{inv.text}}
+              </div>
+            </div>
+          {% endif %}
+        {% endwith %}
+
 		<div class="well well-lg">
 			{{introduction|safe}}
 		</div>
@@ -33,7 +45,50 @@
 				Let&rsquo;s get started &raquo;
 			{% endif %}
 		</a>
+
+		<p style="margin-top: 30px">
+            Or you can <a href="javascript:invite_user_to_take_over_module()">invite a colleague to edit this module</a>.
+            {% if source_invitation %}
+            Or you can <a href="javascript:return_to_requestor({{source_invitation.from_user.id}})">send it back to {{source_invitation.from_user}}</a>.
+            {% endif %}
+        </p>
 	</div>
 </div>
 
+{% endblock %}
+
+
+{% block scripts %}
+<script>
+function invite_user_to_take_over_module() {
+  show_invite_modal(
+    '{{task.title|escapejs}}',
+    'Invite a colleague to answer this module?',
+    {{send_invitation|safe}},
+    'Can you give me a hand completing the module {{task.title|escapejs}} for {{task.project.title|escapejs}}?',
+    {
+      project: {{task.project.id}},
+      into_task_editorship: {{task.id}}
+    },
+    function() { window.location.reload() }
+  );
+
+  return false;
+}
+
+function return_to_requestor(user) {
+  var info = {{send_invitation|safe}};
+  show_invite_modal(
+    'Return This Module',
+    'Let the person that requested this module from you know that you are unable to complete it.',
+    info,
+    'I cannot answer {{task.title|escapejs}}.',
+    {
+      user_id: user,
+      project: info.project_id,
+      into_task_editorship: {{task.id}}
+    });
+  return false;
+}
+</script>
 {% endblock %}
