hide 'Propose an Answer'

--- a/templates/discussion.html
+++ b/templates/discussion.html
@@ -51,7 +51,7 @@
           <form onsubmit="submit_comment(); return false;">
             <textarea class="form-control" rows="3" placeholder="Enter your message here."></textarea>
             <div style="margin-top: 1em; text-align: right">
-              <button type="submit" class="btn btn-default">Propose an Answer</button>
+              {# <button type="submit" class="btn btn-default">Propose an Answer</button> #}
               <button type="submit" class="btn btn-primary">Comment</button>
             </div>
           </form>
