css/design tweaks

--- a/templates/base.html
+++ b/templates/base.html
@@ -36,6 +36,7 @@
                 padding-top: 50px;
                 padding-bottom: 20px;
                 font-size: 16px;
+                overflow-y: scroll;
             }
         </style>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
@@ -53,7 +54,7 @@
     <!--[if gt IE 7]><!-->
 
     <nav class="navbar navbar-default navbar-inverse navbar-fixed-top">
-      <div class="container-fluid">
+      <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
