--- a/templates/module-finished.html
+++ b/templates/module-finished.html
@@ -6,6 +6,9 @@
 
 {% block body %}
 
+<div class="row">
+  <div class="col-sm-push-2 col-sm-8">
+
 {% include "task-header.html" with col_width="4" col_active="review" %}
 
 <div style="margin: 2em 0">
@@ -36,5 +39,7 @@
 
 </div>
 
+</div> <!-- /col -->
+</div> <!-- /row -->
 
 {% endblock %}
