css change on Get Help From Colleagues

--- a/templates/question.html
+++ b/templates/question.html
@@ -132,7 +132,7 @@ Next Question: {{q.title}}
             {% endif %}
         </form>
 
-        <button class="btn btn-info" onclick="$('#need-help').slideToggle();">Get Help From Colleagues</button>
+        <button class="btn btn-default" onclick="$('#need-help').slideToggle();">Get Help From Colleagues</button>
 
         <ul id="need-help" style="display: none; padding: 0; margin-top: 1.25em">
             <li id="start-a-discussion">
